Updated NMF model

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Clustering.ipynb
 Cosine_Similarity_StochasticSage.ipynb
 movie_exploration.ipynb
 movie_extraction.ipynb
+BoredLameRecommender.code-workspace
