Added CoSim Recommender Model

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Cosine_Similarity_StochasticSage.ipynb
 movie_exploration.ipynb
 movie_extraction.ipynb
 BoredLameRecommender.code-workspace
+cosim.ipynb
