--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Cosine_Similarity_StochasticSage.ipynb
 movie_exploration.ipynb
 movie_extraction.ipynb
 BoredLameRecommender.code-workspace
+__pycache__/
+.DS_Store
